[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "langchain-groq>=0.3.6",
    "langgraph>=0.6.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
